--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hello world</h1>
+<!doctype html>
+<head>
+  <title></title>
+</head>
+<body>
+  <h1>Hello world</h1>
+  <p>call me ismarl</p>
+</body>
