--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   <h1>Hello world</h1>
   <a href="about.html">About this project</a>
   <p>call me ismarl</p>
-  <img src="./images/breaching_whale.jpg">
+  <img src="./images/polar_bear.jpg" alt="polar bear">
 </body>
