--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>About us</title>
+  <!- put something here to fix trademake -->
 </head>
 <body>
   <h1>About us</h1>
