--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>A whale of a greeting</title>
+<!- put something here to fix trademake -->  
 </head>
 <body>
   <h1>Hello world</h1>
