--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <title>About us</title>
-  <!- put something here to fix trademake -->
+  <meta charset="utf-8">
 </head>
 <body>
   <h1>About us</h1>
