--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <title>A whale of a greeting</title>
-<!- put something here to fix trademake -->  
+<meta charset="utf-8">  
 </head>
 <body>
   <h1>Hello world</h1>
